--- a/DeadlinesManager/Main/Main.storyboard
+++ b/DeadlinesManager/Main/Main.storyboard
@@ -267,7 +267,7 @@
                                             </state>
                                         </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Проекти" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XIL-da-PRj">
-                                            <rect key="frame" x="16" y="202" width="382" height="30"/>
+                                            <rect key="frame" x="16" y="210" width="382" height="30"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                             <color key="textColor" red="0.053613409399999999" green="0.18740439410000001" blue="0.22908708450000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
@@ -284,7 +284,7 @@
                                         <constraint firstAttribute="bottom" secondItem="zIV-xJ-kGV" secondAttribute="bottom" constant="60" id="SkM-so-gfN"/>
                                         <constraint firstItem="ZOL-Lv-YLE" firstAttribute="height" secondItem="fSZ-vA-l7b" secondAttribute="height" multiplier="0.4" constant="-16" id="VhA-Uj-48W"/>
                                         <constraint firstItem="ry3-2l-hRA" firstAttribute="width" secondItem="fSZ-vA-l7b" secondAttribute="width" multiplier="0.5" constant="-24" id="ZQT-oM-ZTN"/>
-                                        <constraint firstAttribute="bottom" secondItem="XIL-da-PRj" secondAttribute="bottom" constant="8" id="ZQx-WN-IWb"/>
+                                        <constraint firstAttribute="bottom" secondItem="XIL-da-PRj" secondAttribute="bottom" id="ZQx-WN-IWb"/>
                                         <constraint firstItem="ry3-2l-hRA" firstAttribute="leading" secondItem="fSZ-vA-l7b" secondAttribute="leading" constant="16" id="fHx-1n-ZDF"/>
                                         <constraint firstItem="pav-5C-X2J" firstAttribute="top" secondItem="fSZ-vA-l7b" secondAttribute="top" constant="8" id="fyb-JU-S5W"/>
                                         <constraint firstItem="pav-5C-X2J" firstAttribute="height" secondItem="fSZ-vA-l7b" secondAttribute="height" multiplier="0.4" constant="-16" id="hwv-dq-rq9"/>
@@ -332,7 +332,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YNe-b8-a1f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1220" y="755"/>
+            <point key="canvasLocation" x="-1220.2898550724638" y="754.6875"/>
         </scene>
         <!--Title-->
         <scene sceneID="TiM-aQ-qVI">
@@ -726,13 +726,13 @@
                                                     <rect key="frame" x="0.0" y="257.5" width="384" height="45.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Задачі:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Nk-xS-blm">
-                                                            <rect key="frame" x="0.0" y="0.0" width="173" height="45.5"/>
+                                                            <rect key="frame" x="0.0" y="16" width="173" height="27"/>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zav-3D-OAC">
-                                                            <rect key="frame" x="349" y="7.5" width="31.5" height="30.5"/>
+                                                            <rect key="frame" x="349" y="14" width="31.5" height="31"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="Zav-3D-OAC" secondAttribute="height" multiplier="1:1" id="kin-bt-ebZ"/>
                                                             </constraints>
@@ -750,10 +750,10 @@
                                                     <constraints>
                                                         <constraint firstItem="2Nk-xS-blm" firstAttribute="leading" secondItem="WiR-fx-Sty" secondAttribute="leading" id="9vd-Ow-n8q"/>
                                                         <constraint firstItem="2Nk-xS-blm" firstAttribute="width" secondItem="WiR-fx-Sty" secondAttribute="width" multiplier="0.45" id="OF4-OC-40i"/>
-                                                        <constraint firstItem="2Nk-xS-blm" firstAttribute="height" secondItem="WiR-fx-Sty" secondAttribute="height" id="aPr-FC-NVL"/>
+                                                        <constraint firstItem="2Nk-xS-blm" firstAttribute="height" secondItem="WiR-fx-Sty" secondAttribute="height" multiplier="0.6" id="aPr-FC-NVL"/>
                                                         <constraint firstItem="Zav-3D-OAC" firstAttribute="centerX" secondItem="WiR-fx-Sty" secondAttribute="centerX" multiplier="1.9" id="g7T-H3-r7G"/>
-                                                        <constraint firstItem="2Nk-xS-blm" firstAttribute="centerY" secondItem="WiR-fx-Sty" secondAttribute="centerY" id="mTd-rJ-ncA"/>
-                                                        <constraint firstItem="Zav-3D-OAC" firstAttribute="centerY" secondItem="WiR-fx-Sty" secondAttribute="centerY" id="rc2-UB-zZ4"/>
+                                                        <constraint firstItem="2Nk-xS-blm" firstAttribute="centerY" secondItem="WiR-fx-Sty" secondAttribute="centerY" multiplier="1.3" id="mTd-rJ-ncA"/>
+                                                        <constraint firstItem="Zav-3D-OAC" firstAttribute="centerY" secondItem="WiR-fx-Sty" secondAttribute="centerY" multiplier="1.3" id="rc2-UB-zZ4"/>
                                                         <constraint firstItem="Zav-3D-OAC" firstAttribute="height" secondItem="WiR-fx-Sty" secondAttribute="height" multiplier="0.7" id="wUE-XP-xYG"/>
                                                     </constraints>
                                                 </view>
