--- a/DeadlinesManager/Main/Main.storyboard
+++ b/DeadlinesManager/Main/Main.storyboard
@@ -195,14 +195,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="ozL-bc-epP">
-                                <rect key="frame" x="8" y="44" width="398" height="818"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="dy7-Qp-uOn" firstAttribute="trailing" secondItem="ozL-bc-epP" secondAttribute="trailing" constant="8" id="3iB-MX-4F7"/>
+                            <constraint firstItem="dy7-Qp-uOn" firstAttribute="trailing" secondItem="ozL-bc-epP" secondAttribute="trailing" id="3iB-MX-4F7"/>
                             <constraint firstItem="dy7-Qp-uOn" firstAttribute="bottom" secondItem="ozL-bc-epP" secondAttribute="bottom" id="C7v-Lh-0vI"/>
-                            <constraint firstItem="ozL-bc-epP" firstAttribute="leading" secondItem="dy7-Qp-uOn" secondAttribute="leading" constant="8" id="eyA-FD-J4R"/>
+                            <constraint firstItem="ozL-bc-epP" firstAttribute="leading" secondItem="dy7-Qp-uOn" secondAttribute="leading" id="eyA-FD-J4R"/>
                             <constraint firstItem="ozL-bc-epP" firstAttribute="top" secondItem="dy7-Qp-uOn" secondAttribute="top" id="myu-Xz-8lm"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="dy7-Qp-uOn"/>
